--- a/www/index.html
+++ b/www/index.html
@@ -8,11 +8,16 @@
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
     <link rel="stylesheet" type="text/css" href="css/index.css" />
+    <script src="js/app.js"></script>
     <script src="js/index.js"></script>
   </head>
   <body>
 
-    <div class="main-menu">
+    <div class="loading" id="loading">
+      <h1>Loading...</h1>
+    </div>
+
+    <div class="main-menu" id="main-menu">
 
       <div class="col1">
 	<div class="listen">
