--- a/www/index.html
+++ b/www/index.html
@@ -20,14 +20,18 @@
     <div class="main-menu" id="main-menu">
 
       <div class="col1">
-	<div class="listen">
-	  <img src="img/listen.png" />
-	  <p>Listen</p>
-	</div>      
-	<div class="add-mp3">
-	  <img src="img/mp3.png" />
-	  <p>Download mp3</p>
-	</div>
+	<a href="listen.html">
+	  <div class="listen">
+	    <img src="img/listen.png" />
+	    <p>Listen</p>
+	  </div>
+	</a>
+	<a href="mp3">
+	  <div class="add-mp3">
+	    <img src="img/mp3.png" />
+	    <p>Download mp3</p>
+	  </div>
+	</a>
       </div>
 
     </div>
