--- a/www/index.html
+++ b/www/index.html
@@ -8,8 +8,6 @@
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
     <link rel="stylesheet" type="text/css" href="css/index.css" />
-    <script src="js/app.js"></script>
-    <script src="js/index.js"></script>
   </head>
   <body>
 
@@ -36,5 +34,7 @@
 
     </div>
 
+    <script src="js/index.js"></script>
+    <script src="cordova.js"></script>
   </body>
 </html>
