--- a/www/index.html
+++ b/www/index.html
@@ -20,14 +20,12 @@
       <div class="col1">
 	<a href="listen.html">
 	  <div class="listen">
-	    <img src="img/listen.png" />
-	    <p>Listen</p>
+	    <h1>Listen</h1>
 	  </div>
 	</a>
-	<a href="mp3">
+	<a href="mp3.html">
 	  <div class="add-mp3">
-	    <img src="img/mp3.png" />
-	    <p>Download mp3</p>
+	    <h1>Download File</h1>
 	  </div>
 	</a>
       </div>
