--- a/www/listen.html
+++ b/www/listen.html
@@ -1,39 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Main</title>
+    <title>Listen</title>
     <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *">
     <meta charset="UTF-8">
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
-    <link rel="stylesheet" type="text/css" href="css/global.css" />
-    <link rel="stylesheet" type="text/css" href="css/index.css" />
+    <link rel="stylesheet" type="text/css" href="global/listen.css" />
+    <link rel="stylesheet" type="text/css" href="css/listen.css" />
   </head>
   <body>
 
-    <div class="loading" id="loading">
-      <h1>Loading...</h1>
+    <div class="top-menu" id="top-menu">
+      <span class="back-button">
+	<img src="img/back.png" />
+      </span>
+      <span class="search">
+	<img src="img/search.png" />
+      </span>
     </div>
 
-    <div class="main-menu" id="main-menu">
-
-      <div class="col1">
-	<a href="listen.html">
-	  <div class="listen">
-	    <h1>Listen</h1>
-	  </div>
-	</a>
-	<a href="mp3.html">
-	  <div class="add-mp3">
-	    <h1>Download File</h1>
-	  </div>
-	</a>
-      </div>
-
-    </div>
-
-    <script src="js/index.js"></script>
+    <script src="js/listen.js"></script>
     <script src="cordova.js"></script>
   </body>
 </html>
