--- a/www/listen.html
+++ b/www/listen.html
@@ -13,11 +13,13 @@
   <body>
 
     <div class="top-menu" id="top-menu">
-      <span class="back-button">
-	<img src="img/back.png" />
-      </span>
-      <span class="search">
-	<img src="img/search.png" />
+      <a href="index.html">
+	<span class="top-button back-button">
+	  <img src="img/back.png" class="top-menu-img"/>
+	</span>
+      </a>
+      <span class="top-button search">
+	<img src="img/search.png" class="top-menu-img"/>
       </span>
     </div>
 
