Add platform-specific merges

--- a/www/index.html
+++ b/www/index.html
@@ -29,6 +29,7 @@
 
     </div>
 
+    <script src="js/include.js"></script>
     <script src="js/index.js"></script>
     <script src="cordova.js"></script>
   </body>
