--- a/www/listen.html
+++ b/www/listen.html
@@ -23,6 +23,7 @@
       </span>
     </div>
 
+    <script src="js/include.js"></script>
     <script src="js/listen.js"></script>
     <script src="cordova.js"></script>
   </body>
