can download and play hardcoded songs

--- a/www/index.html
+++ b/www/index.html
@@ -20,7 +20,7 @@
 	    <h1>Listen</h1>
 	  </div>
 	</a>
-	<a href="mp3.html">
+	<a href="download.html">
 	  <div class="add-mp3">
 	    <h1>Download File</h1>
 	  </div>
@@ -28,8 +28,9 @@
       </div>
     </div>
 
-    <script src="js/include.js"></script>
-    <script src="js/index.js"></script>
     <script src="cordova.js"></script>
+    <script src="js/include.js"></script>
+    <script src="js/platform_include.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
