--- a/www/download.html
+++ b/www/download.html
@@ -12,20 +12,11 @@
   </head>
   <body>
 
-    <div class="top-menu" id="top-menu">
-      <a href="index.html">
-	<span class="top-button back-button">
-	  <img src="img/back.png" class="top-menu-img"/>
-	</span>
-      </a>
-      <span class="top-button search">
-	<img src="img/search.png" class="top-menu-img"/>
-      </span>
-    </div>
+
 
     <script src="cordova.js"></script>
     <script src="js/include.js"></script>
     <script src="js/platform_include.js"></script>
-    <script src="js/listen.js"></script>
+    <script src="js/download.js"></script>
   </body>
 </html>
