--- a/www/download.html
+++ b/www/download.html
@@ -8,11 +8,29 @@
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
     <link rel="stylesheet" type="text/css" href="css/global.css" />
-    <link rel="stylesheet" type="text/css" href="css/listen.css" />
+    <link rel="stylesheet" type="text/css" href="css/download.css" />
   </head>
   <body>
 
-
+    <div class="top-menu" id="top-menu">
+      <a href="index.html">
+	<span class="top-button back-button">
+	  <img src="img/back.png" class="top-menu-img"/>
+	</span>
+      </a>
+    </div>
+    
+    <div class="downloadUI">
+      <div class="name" id="name-field">
+	<p id="name">Name (click to change)</p>
+      </div>
+      <div class="URL" id="url-field">
+	<p id="url">URL (click to change)</p>
+      </div>
+      <div class="download-button">
+	<h1>Download</h1>
+      </div>
+    </div>
 
     <script src="cordova.js"></script>
     <script src="js/include.js"></script>
