improved download UI, added some websql indexing stuff, changed downloadfile functions to accept functions as arguments to run, TODO: change websql to localstorage with backups to a folder

--- a/www/download.html
+++ b/www/download.html
@@ -22,10 +22,10 @@
     
     <div class="downloadUI">
       <div class="name" id="name-field">
-	<p id="name">Name (click to change)</p>
+	<input type="text" name="name-field" placeholder="Name of song" />
       </div>
       <div class="URL" id="url-field">
-	<p id="url">URL (click to change)</p>
+	<input type="text" name="url-field" placeholder="Download URL" />
       </div>
       <div class="download-button">
 	<h1>Download</h1>
