some improvements to download UI, switched from webSQL to localstorage, added functions for file manipulation and localstorage backups

--- a/www/download.html
+++ b/www/download.html
@@ -21,14 +21,14 @@
     </div>
     
     <div class="downloadUI">
-      <div class="name" id="name-field">
-	<input type="text" name="name-field" placeholder="Name of song" />
+      <div class="name">
+	<input type="text" name="name-field" id="name-field" placeholder="Name of song" />
       </div>
-      <div class="URL" id="url-field">
-	<input type="text" name="url-field" placeholder="Download URL" />
+      <div class="URL">
+	<input type="text" name="url-field" id="url-field" placeholder="Download URL" />
       </div>
-      <div class="download-button">
-	<h1>Download</h1>
+      <div class="download-button" id="download-button">
+	<button><h1>Download</h1></button>
       </div>
     </div>
 
