higher res pixel art for top menu

--- a/www/download.html
+++ b/www/download.html
@@ -15,7 +15,7 @@
     <div class="top-menu" id="top-menu">
       <a href="index.html">
 	<span class="top-button back-button">
-	  <img src="img/back.png" class="top-menu-img"/>
+	  <img src="img/back64.png" class="top-menu-img"/>
 	</span>
       </a>
     </div>
