--- a/www/index.html
+++ b/www/index.html
@@ -15,7 +15,7 @@
     <div class="main-menu" id="main-menu">
 
       <div class="col1">
-	<a href="listen.html">
+	<a href="listen/index.html">
 	  <div class="listen">
 	    <h1>Listen</h1>
 	  </div>
