--- a/www/listen/index.html
+++ b/www/listen/index.html
@@ -7,25 +7,25 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
-    <link rel="stylesheet" type="text/css" href="css/global.css" />
-    <link rel="stylesheet" type="text/css" href="css/listen.css" />
+    <link rel="stylesheet" type="text/css" href="../css/global.css" />
+    <link rel="stylesheet" type="text/css" href="../css/listen.css" />
   </head>
   <body>
 
     <div class="top-menu" id="top-menu">
-      <a href="index.html">
+      <a href="../index.html">
 	<span class="top-button back-button">
-	  <img src="img/back.png" class="top-menu-img"/>
+	  <img src="../img/back64.png" class="top-menu-img"/>
 	</span>
       </a>
       <span class="top-button search">
-	<img src="img/search.png" class="top-menu-img"/>
+	<img src="../img/search64.png" class="top-menu-img"/>
       </span>
     </div>
 
-    <script src="cordova.js"></script>
-    <script src="js/include.js"></script>
-    <script src="js/platform_include.js"></script>
-    <script src="js/listen.js"></script>
+    <script src="../cordova.js"></script>
+    <script src="../js/include.js"></script>
+    <script src="../js/platform_include.js"></script>
+    <script src="../js/listen.js"></script>
   </body>
 </html>
