switch index.html to flex boxes to improve UI

--- a/www/download.html
+++ b/www/download.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Listen</title>
+    <title>Download</title>
     <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *">
     <meta charset="UTF-8">
     <meta name="format-detection" content="telephone=no">
