--- a/www/index.html
+++ b/www/index.html
@@ -13,18 +13,11 @@
   <body>
 
     <div class="main-menu" id="main-menu">
-
-      <div class="col1">
-	<a href="listen/index.html">
-	  <div class="listen">
-	    <h1>Listen</h1>
-	  </div>
-	</a>
-	<a href="download.html">
-	  <div class="add-mp3">
-	    <h1>Download File</h1>
-	  </div>
-	</a>
+      <div class="listen-link" id="listen-link">
+	<h1>Listen</h1>
+      </div>
+      <div class="download-link" id="download-link">
+	<h1>Download File</h1>
       </div>
     </div>
 
