improve UI and fix downloading and storing in songs Set

--- a/www/download.html
+++ b/www/download.html
@@ -21,8 +21,11 @@
     </div>
     
     <div class="downloadUI">
-      <div class="name">
-	<input type="text" name="name-field" id="name-field" placeholder="Name of song" />
+      <div class="title">
+	<input type="text" name="title-field" id="title-field" placeholder="Title" />
+      </div>
+      <div class="artist">
+	<input type="text" name="artist-field" id="artist-field" placeholder="Artist" />
       </div>
       <div class="URL">
 	<input type="text" name="url-field" id="url-field" placeholder="Download URL" />
