being listen UI, started using $ to replace getElementById

--- a/www/listen/index.html
+++ b/www/listen/index.html
@@ -8,24 +8,25 @@
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
     <link rel="stylesheet" type="text/css" href="../css/global.css" />
-    <link rel="stylesheet" type="text/css" href="../css/listen.css" />
+    <link rel="stylesheet" type="text/css" href="../css/listen/index.css" />
   </head>
   <body>
 
     <div class="top-menu" id="top-menu">
-      <a href="../index.html">
-	<span class="top-button back-button">
-	  <img src="../img/back64.png" class="top-menu-img"/>
-	</span>
-      </a>
-      <span class="top-button search">
-	<img src="../img/search64.png" class="top-menu-img"/>
+      <span class="top-button back-button">
+	<img src="img/back64.png" class="top-menu-img" />
       </span>
+    </div>
+
+    <div class="main-menu" id="main-menu">
+      <div class="All songs">
+	<p>All songs</p>
+      </div>
     </div>
 
     <script src="../cordova.js"></script>
     <script src="../js/include.js"></script>
     <script src="../js/platform_include.js"></script>
-    <script src="../js/listen.js"></script>
+    <script src="../js/listen/index.js"></script>
   </body>
 </html>
