listen UI fixes

--- a/www/listen/index.html
+++ b/www/listen/index.html
@@ -8,19 +8,20 @@
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
     <link rel="stylesheet" type="text/css" href="../css/global.css" />
+    <link rel="stylesheet" type="text/css" href="../css/listen/global.css" />
     <link rel="stylesheet" type="text/css" href="../css/listen/index.css" />
   </head>
   <body>
 
     <div class="top-menu" id="top-menu">
-      <span class="top-button back-button">
-	<img src="img/back64.png" class="top-menu-img" />
+      <span class="top-button back-button" id="back-button">
+	<img src="../img/back64.png" class="top-menu-img" />
       </span>
     </div>
 
     <div class="main-menu" id="main-menu">
       <div class="All songs">
-	<p>All songs</p>
+	<p><b>All songs</b></p>
       </div>
     </div>
 
